# kindle-highlights

./: .env.example  .gitignore  Highlights.py  My_Highlights_App.py  README.md  alembic.ini  pyproject.toml  secrets.toml.example  streamlit_app.py
.streamlit/: config.toml
app/: app.py  db_utils.py  ui.py  ui_utils.py
etl/: jobs.py  repository.py
etl/book_metadata/: extract.py  load.py
etl/etl/: load.py  transform.py  utils.py
etl/kindle_highlights/: extract.py  load.py  transform.py
etl/topic_model/: extract.py  load.py  transform.py
pages/: 1_📚_Books.py  2_🔎_Search.py  3_🕐_Reading_Time.py  3_🤖_Topics.py  4_🕐_Reading_Time.py  4_🤖_Topics.py  5_ℹ️_About.py
pages/utils/: Aboreto-base64.txt  db.py  model.py  s3.py  ui.py
src/: settings.py
src/db/: __init__.py  base.py  base_class.py  session.py
src/migrations/: env.py
src/migrations/versions/: 5b76079de295_create_highlights_books_authors_tables.py  e3137c28b6cb_add_notes_column_to_highlight_table.py  ffb4865c0621_create_metadata_table.py
src/models/: author.py  book.py  highlight.py  metadata.py
