[tool.poetry]
name = "kindle-highlights"
version = "0.1.0"
description = ""
authors = ["chipbautista <chippybautista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.14.1"
dagit = "^0.14.1"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
