[tool.poetry]
name = "kindle-highlights"
version = "0.1.0"
description = ""
authors = ["chipbautista <chippybautista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
pandas = "^1.4.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
