[tool.poetry]
name = "kindle-highlights"
version = "0.1.0"
description = ""
authors = ["chipbautista <chippybautista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.40"
alembic = "1.6.5"
pandas = "^1.4.3"
dagster = "^1.0.4"
dagit = "^1.0.4"
loguru = "^0.6.0"
streamlit = "^1.12.0"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
